--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ script:
 deproy:
   provider: script
   script:
-    docker build -t registry.heroku.com/$HEROKU_APP_NAME/web -f dockerfile.prod .;
+    docker build -t registry.heroku.com/$HEROKU_APP_NAME/web -f Dockerfile.prod .;
     docker push registry.heroku.com/$HEROKU_APP_NAME/web;
     heroku run --app $HEROKU_APP_NAME rails db:migrate;
 
-    on:
+  on:
       branch: master
